# detect

./: .gitattributes  .gitignore  CLAUDE.md  README.md  architecture_audit.md  main.py  plan.md  pyproject.toml  quick_start.md  todo_list.md
docs/: encoder_pretraining_design.md  guides.md  json_csv_schema_handling.md  noise_injection_spec.md  parser_strict_tolerant_design.md  span_segments_design.md
output/: pipeline_report.json
parsers/: csv_parser.py  json_parser.py  sql_parser.py  txt_parser.py
resources/: Anthropic Claude系列（以Opus为代表）的特点与应用领域.docx  参观中国电子科技集团第三十研究所.docx  开题报告核心内容0612.md  心得体会.docx  相关论文调研.md  研究内容讨论.md
src/: constants.py
src/extract/: extractor.py  pii_seed.py  schema_dedup.py  schema_partition.py  schema_types.py  schema_unit.py  skeleton.py  topology.py  value_profile.py  vocab_table.py  vocabulary.py
src/parse/: csv_parser.py  grade.py  json_parser.py  json_recovery.py  recovery.py  sql_parser.py  sql_strict.py  sqlite_parser.py  xlsx_parser.py
src/sniff/: profiler.py  sniffer.py  voting.py
src/synth/: __init__.py  compare.py  llm_render.py  render.py  validate.py
src/utils/: encoding.py  file_utils.py  jsonl.py  logger.py  text_utils.py
test_data/: _validate_part.py  _validate_q1q2.py  generate.py
test_data/DataPart/: test1.json  test2.json
test_data/csv_dedup_samples/: 1.csv  2.csv  3.csv  4.csv  5.csv  6.csv  ad_groups_five_col.csv  ad_line_carriers.csv  ad_line_carriers_1.csv  ad_line_carriers_2.csv  ad_line_carriers_3.csv  ad_line_carriers_4.csv  ad_line_devices.csv  ad_line_devices_1.csv  (+3 more)
tests/: conftest.py
(+61 files in other folders)
