[project]
name = "detect-model"
version = "0.1.0"
description = "Data preprocessing and PII detection pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chardet>=5.2.0",
    "ijson>=3.3.0",
    "json5>=0.10.0",
    "openpyxl>=3.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
